tests/test_date/bad/output/uncomparable_duration.catala_en.Lt.Interpret
[ERROR] Cannot compare together durations that cannot be converted to a precise number of days

  --> test_date/bad/uncomparable_duration.catala_en
   | 
10 |   definition d equals 1 month <^ 2 day
   |                       ^^^^^^^
   + `UncomparableDurations` exception management
   +-+ `<^` operator

  --> test_date/bad/uncomparable_duration.catala_en
   | 
10 |   definition d equals 1 month <^ 2 day
   |                                  ^^^^^
   + `UncomparableDurations` exception management
   +-+ `<^` operator
